--- a/src/Components/Pagination.module.css
+++ b/src/Components/Pagination.module.css
@@ -14,6 +14,7 @@
     color: var(--text-muted);
     border-radius: 0.375rem;
     transition: all .3s;
+    color: black;
 
     &:hover, &:focus {
       background-color: #796e6e79;
@@ -27,6 +28,6 @@
 
 .isActive {
   background-color: var(--primary-light);
-  color: white;
+  color: rgb(0, 0, 0);
   pointer-events: none;
 }
